--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@ Documentation of libs
 <li><a href=Installation/Partitioner/LibstorageNG/v4_3/GuidedSetup/SelectHardDisksController.html>Installation/Partitioner/LibstorageNG/v4_3/GuidedSetup/SelectHardDisksController.pm</a></li>
 <li><a href=Installation/Partitioner/LibstorageNG/v4_3/GuidedSetupController.html>Installation/Partitioner/LibstorageNG/v4_3/GuidedSetupController.pm</a></li>
 <li><a href=Installation/Partitioner/LibstorageNG/v4_3/RaidTypePage.html>Installation/Partitioner/LibstorageNG/v4_3/RaidTypePage.pm</a></li>
+<li><a href=Kernel/net_tests.html>Kernel/net_tests.pm</a></li>
+<li><a href=Kernel/usb.html>Kernel/usb.pm</a></li>
 <li><a href=Kselftests/parsers/main.html>Kselftests/parsers/main.pm</a></li>
 <li><a href=Kselftests/utils.html>Kselftests/utils.pm</a></li>
 <li><a href=Mitigation.html>Mitigation.pm</a></li>
@@ -80,6 +82,7 @@ Documentation of libs
 <li><a href=hpc/utils.html>hpc/utils.pm</a></li>
 <li><a href=hpcbase.html>hpcbase.pm</a></li>
 <li><a href=ipmi_backend_utils.html>ipmi_backend_utils.pm</a></li>
+<li><a href=iscsi.html>iscsi.pm</a></li>
 <li><a href=kdump_utils.html>kdump_utils.pm</a></li>
 <li><a href=known_bugs.html>known_bugs.pm</a></li>
 <li><a href=main_publiccloud.html>main_publiccloud.pm</a></li>
@@ -129,6 +132,7 @@ Documentation of libs
 <li><a href=sles4sap/console_redirection/redirection_data_tools.html>sles4sap/console_redirection/redirection_data_tools.pm</a></li>
 <li><a href=sles4sap/crash.html>sles4sap/crash.pm</a></li>
 <li><a href=sles4sap/database_hana.html>sles4sap/database_hana.pm</a></li>
+<li><a href=sles4sap/gcp_cli.html>sles4sap/gcp_cli.pm</a></li>
 <li><a href=sles4sap/ibsm.html>sles4sap/ibsm.pm</a></li>
 <li><a href=sles4sap/ipaddr2.html>sles4sap/ipaddr2.pm</a></li>
 <li><a href=sles4sap/qesap/aws.html>sles4sap/qesap/aws.pm</a></li>
@@ -151,7 +155,6 @@ Documentation of libs
 <li><a href=susedistribution.html>susedistribution.pm</a></li>
 <li><a href=thunderbird_common.html>thunderbird_common.pm</a></li>
 <li><a href=transactional.html>transactional.pm</a></li>
-<li><a href=usb.html>usb.pm</a></li>
 <li><a href=utils.html>utils.pm</a></li>
 <li><a href=validate_encrypt_utils.html>validate_encrypt_utils.pm</a></li>
 <li><a href=version_utils.html>version_utils.pm</a></li>
